--- a/_config.yml
+++ b/_config.yml
@@ -5,13 +5,15 @@
 # baseurl:    /~vpalepu
 # root: /~vpalepu/_site
 # file-system
-url: file:///home/vijay/website/_site
+# url: file:///home/vijay/website/_site
+#jekyll serve
+# url: http://0.0.0.0:4000/
 # local
-# url: http://localhost:4000
+# url: http://localhost:8080
 # ics testing
 # url: http://www.ics.uci.edu/~vpalepu/_site
 # ics live
-# url: http://www.ics.uci.edu/~vpalepu
+url: http://www.ics.uci.edu/~vpalepu
 # bitbucket
 # url: http://vpalepu.bitbucket.org
 
@@ -22,8 +24,8 @@ url: file:///home/vijay/website/_site
 
 # future:      true
 # lsi:         false
-pygments:    true
-markdown:    maruku
+highlighter:    pygments
+markdown:    kramdown
 permalink:   /:year/:month/:day/:title.html
 # permalink:   date
 
@@ -37,12 +39,12 @@ maruku:
 # rdiscount:
 #   extensions: []
 
-# kramdown:
-#   auto_ids: true,
-#   footnote_nr: 1
-#   entity_output: as_char
-#   toc_levels: 1..6
-#   use_coderay: false
+kramdown:
+  auto_ids: true,
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  use_coderay: false
 
 #   coderay:
 #     coderay_wrap: div
