--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,11 @@
 # ics testing
 # url: http://www.ics.uci.edu/~vpalepu/_site
 # ics live
-url: http://www.ics.uci.edu/~vpalepu
+# url: http://www.ics.uci.edu/~vpalepu
 # bitbucket
 # url: http://vpalepu.bitbucket.org
+# github
+url: https://vijaykrishna.github.io
 
 
 # source:      .
@@ -24,7 +26,7 @@ url: http://www.ics.uci.edu/~vpalepu
 
 # future:      true
 # lsi:         false
-highlighter:    pygments
+highlighter:    rouge
 markdown:    kramdown
 permalink:   /:year/:month/:day/:title.html
 # permalink:   date
