--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # baseurl:    /~vpalepu
 # root: /~vpalepu/_site
 # file-system
-# url: file:///home/vijay/website/_site
+url: file:///home/vijay/website/_site
 #jekyll serve
 # url: http://127.0.0.1:4000
 # local
@@ -17,7 +17,7 @@
 # bitbucket
 # url: http://vpalepu.bitbucket.org
 # github
-url: https://vijaykrishna.github.io
+# url: https://vijaykrishna.github.io
 
 
 # source:      .
@@ -46,7 +46,7 @@ kramdown:
   footnote_nr: 1
   entity_output: as_char
   toc_levels: 1..6
-  use_coderay: false
+  enable_coderay: false
 
 #   coderay:
 #     coderay_wrap: div
