--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@
 # bitbucket
 # url: http://vpalepu.bitbucket.org
 # github
-url: https://vijaykrishna.github.io
+# url: https://vijaykrishna.github.io
 
 
 # source:      .
