static rss feed

--- a/_data/medium.yml
+++ b/_data/medium.yml
@@ -1,19 +1,40 @@
-- date: '2014-12-24'
-  link: https://medium.com/@vkrishnapalepu/what-is-success-in-software-research-af1222409bbf
-  title: 'What is success in Software Research?'
+- date: 'Sat, 22 Jan 2022 02:36:10 GMT'
+  link: 'https://medium.com/cfh-during-wfh/roasting-the-bitterness-out-of-a-bitter-gourd-7f604a3b2339?source=rss-8d5f2fdc2460------2'
+  title: 'Roasting the Bitterness out of a Bitter Gourd?'
 
-- date: '2014-01-29'
-  link: https://medium.com/p/92769ddd15c7
-  title: 'The Program and The Brain.'
+- date: 'Fri, 21 Jan 2022 06:24:52 GMT'
+  link: 'https://medium.com/cfh-during-wfh/rajat-joins-cfh-during-wfh-d0a8ecdcfe1e?source=rss-8d5f2fdc2460------2'
+  title: 'Rajat joins CFH During WFH!'
 
-- date: '2013-10-25'
-  link: https://medium.com/software-engineering/e13bb3fa8138
-  title: 'The Warewolf named Software.'
+- date: 'Thu, 20 Jan 2022 03:51:17 GMT'
+  link: 'https://medium.com/cfh-during-wfh/mom-joins-as-a-writer-899856b1809b?source=rss-8d5f2fdc2460------2'
+  title: 'Mom joins CFH During WFH!'
 
-- date: '2013-08-09'
-  link: https://medium.com/life-lessons-2/becbe3b9c9a0
-  title: 'Ideas and Implementations make each other possible.'
+- date: 'Thu, 20 Jan 2022 03:18:44 GMT'
+  link: 'https://medium.com/cfh-during-wfh/pan-dish-a-bitter-gourd-%EF%B8%8F-35ed5a0e5981?source=rss-8d5f2fdc2460------2'
+  title: 'Pan Dish: A Bitter Gourd? ♨️'
 
-- date: '2013-07-14'
-  link: https://medium.com/what-i-learned-building/2d00eb996da4
-  title: 'Programming, Ideas and Software.'
+- date: 'Wed, 19 Jan 2022 01:52:50 GMT'
+  link: 'https://medium.com/snap-shots/views-from-the-passenger-seat-fda195d8ab02?source=rss-8d5f2fdc2460------2'
+  title: 'Views from the Passenger Seat'
+
+- date: 'Sat, 15 Jan 2022 22:52:26 GMT'
+  link: 'https://blog.cryptostars.is/metaverse-is-metastasizing-64af36a0478?source=rss-8d5f2fdc2460------2'
+  title: '#Metaverse is Metastasizing'
+
+- date: 'Sat, 15 Jan 2022 19:42:01 GMT'
+  link: 'https://vkrishnapalepu.medium.com/unforced-errors-ce15c7a216f7?source=rss-8d5f2fdc2460------2'
+  title: 'Unforced Errors'
+
+- date: 'Sat, 15 Jan 2022 18:24:11 GMT'
+  link: 'https://vkrishnapalepu.medium.com/runs-to-remember-%EF%B8%8F-b64283009fe9?source=rss-8d5f2fdc2460------2'
+  title: 'Runs to Remember ‍♂️'
+
+- date: 'Sun, 09 Jan 2022 01:47:58 GMT'
+  link: 'https://vkrishnapalepu.medium.com/an-orange-day-in-san-fransisco-46078c33bece?source=rss-8d5f2fdc2460------2'
+  title: 'An Orange Day in San Fransisco'
+
+- date: 'Fri, 07 Jan 2022 15:52:36 GMT'
+  link: 'https://vkrishnapalepu.medium.com/a-digital-spring-cleaning-f7a83a6964c3?source=rss-8d5f2fdc2460------2'
+  title: 'A Digital “Spring Cleaning”'
+
