--- a/_data/cfh.yml
+++ b/_data/cfh.yml
@@ -1,3 +1,23 @@
+- date: 'Sat, 29 Jan 2022 20:23:28 GMT'
+  link: 'https://medium.com/cfh-during-wfh/crusted-egg-fry-1eff52f8c02d?source=rss----f996617455f2--cooking'
+  title: 'Crusted Egg Fry'
+
+- date: 'Sat, 29 Jan 2022 19:37:42 GMT'
+  link: 'https://medium.com/cfh-during-wfh/layers-of-biriyani-7f235e93474c?source=rss----f996617455f2--cooking'
+  title: 'Layers of Biriyani'
+
+- date: 'Tue, 25 Jan 2022 03:01:54 GMT'
+  link: 'https://medium.com/cfh-during-wfh/a-bitter-brew-a956d4b7a1f0?source=rss----f996617455f2--cooking'
+  title: 'A Bitter Brew?'
+
+- date: 'Sun, 23 Jan 2022 08:33:20 GMT'
+  link: 'https://medium.com/cfh-during-wfh/ragi-idli-and-dosa-46dc61dc52f4?source=rss----f996617455f2--cooking'
+  title: 'Ragi Idli and Dosa'
+
+- date: 'Sun, 23 Jan 2022 06:02:55 GMT'
+  link: 'https://medium.com/cfh-during-wfh/channa-masala-and-lachha-paratha-weekend-craving-satisfied-cdde27b9dda6?source=rss----f996617455f2--cooking'
+  title: 'Channa masala and lachha paratha- Weekend craving satisfied'
+
 - date: 'Sat, 22 Jan 2022 02:36:10 GMT'
   link: 'https://medium.com/cfh-during-wfh/roasting-the-bitterness-out-of-a-bitter-gourd-7f604a3b2339?source=rss----f996617455f2--cooking'
   title: 'Roasting the Bitterness out of a Bitter Gourd?'
@@ -17,20 +37,4 @@
 - date: 'Tue, 04 Jan 2022 10:18:50 GMT'
   link: 'https://medium.com/cfh-during-wfh/making-rajma-with-pressure-21fb7fc30d92?source=rss----f996617455f2--cooking'
   title: 'Making Rajma — With Pressure'
-
-- date: 'Sun, 02 Jan 2022 02:45:32 GMT'
-  link: 'https://medium.com/cfh-during-wfh/pan-dish-steam-cooked-green-beans-9440b5c7b2d2?source=rss----f996617455f2--cooking'
-  title: 'Pan Dish: Steam Cooked Green Beans'
-
-- date: 'Wed, 29 Dec 2021 16:27:32 GMT'
-  link: 'https://medium.com/cfh-during-wfh/upma-a-classic-indian-breakfast-cd89de2f425d?source=rss----f996617455f2--cooking'
-  title: 'Upma: A Classic Indian Breakfast'
-
-- date: 'Mon, 27 Dec 2021 09:03:08 GMT'
-  link: 'https://medium.com/cfh-during-wfh/seems-i-can-make-egg-fried-rice-7059c6d559c9?source=rss----f996617455f2--cooking'
-  title: 'Seems I can make Egg Fried Rice'
-
-- date: 'Mon, 27 Dec 2021 09:02:13 GMT'
-  link: 'https://medium.com/cfh-during-wfh/roasted-flowerets-38b799fbb2a8?source=rss----f996617455f2--cooking'
-  title: 'Roasted Flowerets'
 
